// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot when hovering on a constructor 1`] = `
"\`\`\`
Constr: (content) -> T<content>
\`\`\`
type constructor
"
`;

exports[`snapshot when hovering on a constructor reference 1`] = `
"\`\`\`
Constr: (content) -> T<content>
\`\`\`
type constructor
"
`;

exports[`snapshot when hovering on a local fn 1`] = `
"\`\`\`
closure: (a) -> b
\`\`\`
local declaration
"
`;

exports[`snapshot when hovering on an extern type 1`] = `
"\`\`\`
glb: (x) -> x
\`\`\`

"
`;

exports[`snapshot when hovering on an extern type reference 1`] = `
"\`\`\`
glb: (x) -> x
\`\`\`

"
`;

exports[`snapshot when hovering on global fn 1`] = `
"\`\`\`
glb: (a, b) -> b
\`\`\`

"
`;
